samples/_failures_safe/1761303216_ea8993_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a643a8e5.c: In function ‘print_high_severity_logs’:
./samples/SAFE/__tmp_a643a8e5.c:144:12: error: missing terminating " character
  144 |     printf("High severity logs (severity
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a643a8e5.c:144:5: error: expected expression at end of input
  144 |     printf("High severity logs (severity
      |     ^~~~~~
./samples/SAFE/__tmp_a643a8e5.c:144:5: error: expected declaration or statement at end of input
